# avs-device-sdk

KWD/: CMakeLists.txt
KWD/KWDProvider/src/: CMakeLists.txt  KeywordDetectorProvider.cpp
KWD/Syntiant/: CMakeLists.txt
KWD/Syntiant/include/Syntiant/: SyntiantKeywordDetector.h
KWD/Syntiant/src/: CMakeLists.txt  SyntiantKeywordDetector.cpp
KWD/Syntiant/test/: CMakeLists.txt  SyntiantKeywordDetectorTest.cpp
SampleApp/src/: main.cpp
